Finished leetcode medium's two sum || solution using two pointer method

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>All Intro Challenges</title>
 </head>
 <body>
-  <script src="test.js"></script>
+  <script src=".test/test.js"></script>
+  <!-- <script src=".test/testing-data-structures.js"></script> -->
 </body>
 </html>
